<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name = "s1">عدد كروت اللعبه :</string>
    <string name="title1"><u>مقدمة سريعة</u></string>
     <string name="title2"><u>بتتلعب ازاي</u></string>
      <string name="title3"><u>خد بالك من دول</u></string>
    <string name="introductionP1">تابوه لعبة مش من اختراعي،  اي كلام في اللعبة مش مقصود بيه إهانة لأي حد ولا تريقة علي حد </string>
    <string name="app_name">Taboo Bel 3araby</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
     <string name="howToPlayP1">

تابوه بالعربي محتاجة فرقتين أي عدد، كل ما العدد يكون أكتر كل ما يكون أحسن. كل فريق في دوره بيرشح عضو، العضو ده بيحاول يشرح لفريقه الكلمة المكتوبة بالكبير من غير ما يستخدم أي كلمة من الكلمات اللي تحتها (كلمات تابوه)</string>
	
	<string name="howToPlayP2"> لو الفريق جاب الكلمة، العضو بيدوس علي زرار "جابوها". لو العضو مقصر و مش هيعرف يشرح الكلمة ممكن يدوس "إلي بعدو" و ساعتها هيجيلو كلمة تانيه و هكذا.</string> 
	
	
	<string name="howToPlayP3">كل دور فيه وقت محدد و كل فريق بيحاول يعرف أكتر عدد ممكن من الكلمات. كل كلمة الفريق بيعرفها بياخد نقطه، او في ثقافات اخري بُنط. و كل ما مابيعرفوش كلمة و بيدوسوا  بينقصو بُنط. الفريق اللي بيوصل ل١٥ بيكسب.
	    
	</string>
	
	<string name="pointersP1">
١) فيه شباب هتستعبط  و تقولك كلام بالانجليزي أو بالعربي ليه نفس معاني الكلمات التابوه، دول ماتسكتُلهمش 
	    
	</string>
	<string name="pointersP2">٢) شباب هتدوس علي زراز "جابوها" حتي لو فريقهم ماعرفش الكلمة و هيقولك مش قصدي و دول أنا عارفهم كويس فممكن بعد ما يعملوا كده يدوسوا علي زراز "إخيه" و ده هيخصم منهم ٢ بُنط مش واحد فقولهم يركزوا</string>
	
	<string name="introductionP2">النسخه ديه من تابوه بالعربي فيها ٤٠٠ كارت، لو عايز كروت أكتر  دوس علي ال+  في الصفحه الرئيسيه وزود كروتك وحنا هنراجعها وهنزودها لو حلوه, غير كده لازم تستنى الابديت .</string>
	<string name="introductionP3"></string>
	
	<string name="banner_ad_unit_id">ca-app-pub-8600767020806755/2184405027</string>
	<string name= "test">ca-app-pub-3940256099942544/6300978111</string>
	</resources>
